[package]
name = "formatx"
version = "0.2.1"
description = "A macro for formatting non literal strings at runtime"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/formatx"
documentation = "https://docs.rs/formatx"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["string", "runtime", "format", "template"]
categories = ["rust-patterns", "template-engine"]
exclude = [".github"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
