[package]
name = "formatx"
version = "0.3.0"
edition = "2024"
authors = ["clitic <clitic21@gmail.com>"]
description = "Runtime string formatting with std::fmt syntax"
documentation = "https://docs.rs/formatx"
categories = ["rust-patterns", "template-engine"]
keywords = ["string", "runtime", "format", "template"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/clitic/formatx"

[dependencies]
